--- a/suplementos_style.css
+++ b/suplementos_style.css
@@ -50,8 +50,80 @@
     transition: 0.5s;
     border-radius: 10px;
 }
-
 .navBtn:hover{
+    background:rgba(80, 80, 211, 0.767);
+    transform: scale(1.15);
+}
+
+.sectionDescription{
+    font-size: 22px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.gridConteiner{
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    /*grid-template-areas: "mainContent sidebarContent";*/
+    padding: 20px;
+    flex: 1 0 auto;
+}
+
+.mainContent{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+    grid-area: "mainContent";
+}
+
+.categoryCard{
+    width: 450px;
+    height: 200px;
+    padding: 10px;
+    border: 3px solid transparent;
+    border-radius: 10px;
+    transition: 0.5s;
+}
+
+.mainCardImg{
+    width: 100%;
+    height: 50%;
+    border-radius: 10px;
+}
+
+.categoryCard:hover{
+    border-color: black;
+}
+
+.mainCategoryCardTitle{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    padding: 6px;
+}
+
+.cardBtnGroup{
+    display: flex;
+    justify-content: space-around;
+    gap: 15px;
+    padding-top: 10px;
+}
+
+.cardBtn{
+    font-weight: bolder;
+    font-size: 20px;
+    padding: 6px;
+    background-color: lightblue;
+    border: 2px solid transparent;
+    color: black;
+    cursor: pointer;
+    transition: 0.5s;
+    border-radius: 10px;
+}
+
+.cardBtn:hover{
     background:rgba(80, 80, 211, 0.767);
     transform: scale(1.15);
 }
