--- a/suplementos_style.css
+++ b/suplementos_style.css
@@ -66,7 +66,7 @@
 .gridConteiner{
     display: grid;
     grid-template-columns: 3fr 1fr;
-    /*grid-template-areas: "mainContent sidebarContent";*/
+    grid-template-areas: "mainContent sidebarContent";
     padding: 20px;
     flex: 1 0 auto;
 }
@@ -127,3 +127,40 @@
     background:rgba(80, 80, 211, 0.767);
     transform: scale(1.15);
 }
+
+.sidebarContent{
+    background-color: #11102b;
+    color: white;
+    padding: 16px;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    width: 250px;
+    grid-area: "sidebarContent";
+    gap: 20px;
+}
+.sidebarCard{
+    width: 75%;
+    padding-top: 15px;
+    border: 3px solid transparent;
+    border-radius: 10px;
+    transition: 0.5s;
+    cursor: pointer;
+    text-align: center;
+}
+
+.sidebarCardImg{
+    width: 75%;
+    border-radius: 10px;
+}
+
+.sidebarCardTitle{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    padding: 10px;
+}
+
+.sidebarCard:hover{
+    border-color: gainsboro;
+}
+
